# DustCollector

./: .gitignore  README.md  conventions.md  partsdb.py  pyproject.toml  requirements.txt  simple_db.json  simple_db_backup.json
code/: actuator.py  classes.dot  dustcontroller.py  gate.py  junk.py  makefile  packages.dot  sensor.py  testfile.txt  timer.py  tool.py
docs/: .~lock.design-doc.odt#  ADS1115.graphml  DustCollector Design Document.html  DustCollector Design Document.md  IOBitAssignments.ods  MotorDistributorSystem.fzz  current-sense.txt  description.odt  description.txt  design-doc.odt  development-notes.odt  distributor.diy  distributor_wiring.odt  gate-states.graphml  hardware-development-plan.odt  interfaces.odt  links.html  lm358-circuit..graphml  make-table.py  ordered-task-list.odt  out.ps  pandocit.sh  physical-layout.graphml  revised-description.odt  revised-revised-description.odt  schematic-overview.graphml  software-architecture.graphml  switch-to-ssd.html  system-layout-original.graphml  system-layout.graphml  temp.md  uml-diagram.xmi
hardware/: README.md
notebooks/: DustCollectorDesign.ipynb  README.md  Untitled.ipynb
obsidian-vault/: To-Do List.md  Welcome.md
src/: 8825_test.py  8825_test_all.py  8825_test_all_1_rotation.py  8OLED_demo.py  OLED_demo.py  OLED_fractal.py  OLED_gate_sim.py  OLED_harper.py  OLED_pressure_sim.py  SIPO_FAST_test.py  SIPO_test.py  aqm-controller.py  aqm-off.py  aqm-on.py  aqm-plot.py  aqserver.py  async_temp_sensor.py  convert_harper.py  cpu_temp.py  current_on_off.py  current_sense.py  data.txt  data2.txt  (+37 more)
(+30 files in other folders)
